# finetune-platform

./: .dockerignore  .env.example  .gitignore  .vercelignore  AWS-CONSOLE-GUIDE.md  DEMO.md  Dockerfile  Dockerfile.ollama  EKS-RUNBOOK.md  INSTALL-EKS.md  LEARNINGS.md  LICENSE  Makefile  README.md  demo-record-appliance.js  demo-record-sre-flow.js  demo-record-sre.js  demo-record.js  demo.sh  docker-compose.yml  package-lock.json  pm2.config.json  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: build-image.yml  docker-publish-ollama.yml  docker-publish.yml  publish-chart.yml
charts/finetune-platform/: Chart.yaml  README.md  values.yaml
data/: test_duck.db  training.db  training_history.json
data/discovery/: discovery_medical_coding_and_billing_cod.json
data/dryrun/: train.jsonl  valid.jsonl
data/insurance-k3s-combined/: verified_train.jsonl
demo-assets/: 01-intro.aiff  02-define-domain.aiff  03-generate.aiff  04-train.aiff  05-chat.aiff  06-add-data.aiff  07-retrain.aiff  08-better-chat.aiff  09-outro.aiff
docs-site/: eks-deployment.html  index.html
pipeline/: config.yaml  consensus_verifier.py  data_generator.py  data_store.py  eval_harness.py  export_gguf.py  export_hf.py  export_worker.py  grpo_trainer.py  inference_server.py  logging_util.py  model_discovery.py  recursive_loop.py  train_qlora.py  training_manager.py  training_worker.py  training_worker_hf.py
scripts/: build_deploy_doc.py  gen_sre_dataset.py  gen_sre_demo_split.py  gen_sre_tables.py  install-eks.sh  run_sre_demo.sh  serve.sh
ui/: app.py
(+83 files in other folders)
