[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "finetune-platform"
version = "1.0.0"
description = "Local recursive fine-tuning platform — MLX-native, multi-model consensus, SSE streaming, Ollama serving"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Fine-Tuning Platform Contributors" }]
keywords = ["mlx", "fine-tuning", "lora", "llm", "apple-silicon", "rag"]

dependencies = [
    "mlx>=0.31",
    "mlx-lm>=0.31",
    "torch>=2.0",
    "transformers>=4.0",
    "datasets>=3.0",
    "accelerate>=1.0",
    "trl>=0.0",
    "peft>=0.0",
    "turbovec>=0.8",
    "fastapi>=0.136",
    "uvicorn>=0.49",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.urls]
Source = "https://github.com/your-org/finetune-platform"
